chamber/styles/small.css
/* ... */
/* discover page */
#discover div {
  margin: 1rem 8px;
  border: 1px solid var(--txt-color);
  background-color: #eeee;
  border-radius: 8px;
  overflow: hidden;
  display: grid;
  grid-template-areas:
  "name"
  "photo"
  "description"
  "address"
  "button";
}

#discover div h2,
#discover div p,
#discover div address {
  margin: .8rem 10px;
}

#discover div h2 {
  grid-area: name;
}

#discover div img {
 width: 100%;
 grid-area: photo;
}

#discover div p {
  grid-area: description;
}

#discover div address {
  grid-area: address;
}

#discover div button {
  grid-area: button;
  transition: background-color 0.3s ease;
  border: 3px solid var(--txt-color);
  background-color: var(--txt-color);
  color: var(--bg-color);
  border-radius: 8px;
  padding: .4rem;
  margin: .5rem;
}

#discover div button:hover {
  border: 3px solid var(--txt-color);
  background-color: var(--bg-color);
  color: var(--txt-color);
}

.message-track {
  margin: 0.5rem;
  display: grid;
  justify-content: center;
  align-items: center;
}

